# Boids

./: .gitignore  CMakeLists.txt
include/: Boid.h  Callbacks.h  Renderable.h  Vec2.h  Window.h  WindowManager.h
include/window/: Library.h  Window.h
src/: Boid.cpp  Callbacks.cpp  Renderable.cpp  Vec2.cpp  Window.cpp  WindowManager.cpp  main.cpp
src/window/: Library.cpp  RenderManager.cpp  Window.cpp
